# Playwright-automation

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  SETUP.md  pyproject.toml
data/: CAF_data.json  credentials.json
features/: caf_objectives_navigation_session_per_scenario.feature  caf_objectives_navigation_singlesession.feature  caf_publish_assessment_standards_met.feature  environment.py
features/steps/: caf_assessment_steps.py  login_steps.py
helpers/: browser_instance.py  credentials_helper.py  playwright_helpers.py
pages/: login_page.py  organisation_select_page.py  publications_page.py
pages/CafAssessment/: before_you_start_page.py  check_your_answers_page.py  confirmation_published_page.py  objective_a_principles.py  objective_b_principles.py  objective_c_principles.py  objective_d_principles.py  objective_e_principles.py  objectives_page.py  outcome_page.py  principles_page.py  publish_assessment.py
utils/: custom_logger.py  tag_helper.py
